add AMSR-E ice products and other raw binary products
add orientation fixes for AVISO currents and similar NetCDFs lacking metadata on the internal CRS
add VRT output to saveStack
Fix lines falling between the cracks in extract (calling rasterzeLines): https://stat.ethz.ch/pipermail/r-sig-geo/2014-May/020973.html
allow setting a 'spatial window'


--- current version
Bug fixes:
in rasterFromXYZ (by Gareth Davies)
in crop (by Florian Detsch)
in stack (http://stackoverflow.com/questions/32564932/r-import-two-or-more-selected-bands-from-an-image-stack)

--- 8-September-2015, version: 2.4-20
Andrei Mirt send a bug fix for corLocal
namespace now captures all functions from other packages
.nchar to replace nchar to avoid R version problem
Sebastian Bock reported a bug in raster:::.circular.weight
various minor fixes

--- 2-July-2015, version: 2.4-15
Improved geodesic algorithm (GeograhicLib by C.F.F. Karney) for pointDistance and other lon/lat distance computations, and to compute the area of an ellipsoidal polygon
significant speed improvement for bilinear resample / projection (by Joe Cheng) 
new functions colSums and rowSums
fixed colnames for  extract(s, points, df = TRUE, cellnumbers = TRUE). Reported by Loic Dutrieux
fixes to avoid errors thrown by current PROJ.4 (crs must have ellipsoid or datum)
bug fix: writeRaster did not write names of in memory RasterLayers. Reported by Toph Allen
temp files were not removed. Fixed by Samuel Bosch
image failed for a raster with a single row. Patched by Daniel Schlaepfer

--- 11-April-2015, version: 2.3-40
Category names are now written to file via rgdal or native format
color tables are now written to file via rgdal or native format
bug fixes:
Creating a brick from RasterLayers with a filename argument did not deal with 'overwrite=TRUE'. Reported by Tom Philippi
boxplot with two raster wasn't going right (reported by Stefan Schlaffer)
native format can now write/read POSIXct z-values (patch provided by Stefan Schlaffer)